[package]
name = "randonames"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
reqwest = "0.12.5"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4.3"
snafu = { version = "0.8.4", features = [
    "backtrace",
    "unstable-provider-api",
    "unstable-try-trait",
] }
chrono = "*"
